fix some alignment issues with the vizualisation, suggestions from @taneemt

--- a/public/stylesheets/visualization.css
+++ b/public/stylesheets/visualization.css
@@ -9,16 +9,17 @@
    font-size: 13px;
    line-height: 1.5em;
    width: 396px;
-   margin-right: 5px;
+   margin-right: 15px;
 }
 #lists {
    white-space: nowrap;
 }
 #tag-list {
   float: left;
-  width:200px;
+  width:185px;
   font-size: 13px;
   white-space: normal;
+  margin-right: 5px;
 }
 #datapoint-list {
   float: left;
@@ -60,6 +61,13 @@
   display: block;
   background: #eee;
   padding: 1.5px;
+}
+#mapcontainer .datapointTitle  {
+  font-weight:bold;
+  margin-bottom: 1px;
+  padding: 3px;
+  font-size: 13px;
+  vertical-align: top;
 }
 #datapoint-list .datapointTitle  {
   font-weight:bold;
